--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+cue2toc (0.4-5.1) unstable; urgency=medium
+
+  * Non-maintainer upload.
+  * debian/control:
+    + Drop obsolete DM-Upload-Allowed field.
+    + Bump Standards-Version to 4.6.2.
+    + Bump debhelper compat to v13. (Closes: #965475)
+    + Add Vcs-* fields to Debian Salsa GitLab.
+  * debian/source/format: Use "3.0 (quilt)". (Closes: #1036203)
+    + Revert source code to patchless original upstream/0.4 version.
+  * debian/rules: Rewrite with dh sequencer. (Closes: #999171)
+
+ -- Boyuan Yang <byang@debian.org>  Sun, 18 Jun 2023 12:59:46 -0400
+
 cue2toc (0.4-5) unstable; urgency=low
 
   * Fix watch file.
